<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_account"
            />

        <EditText
            android:id="@+id/accountNameField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/account_name"
            />

        <EditText
            android:id="@+id/accountBalanceField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/current_balance"
            />

        <Spinner
            android:id="@+id/accountTypeDropdown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <Button
                android:id="@+id/cancelAddAccount"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/cancel"
                />

            <Button
                android:id="@+id/saveAddAccount"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/save"
                />

        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>