<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.AccountDetails">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:divider="@drawable/spacer_huge"
        android:showDividers="middle"
        android:gravity="center"
        android:padding="@dimen/spacing_large" >

        <!-- Name -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center" >

            <TextView
                style="@style/detailLabel"
                android:text="@string/account_name" />

            <EditText
                android:id="@+id/nameEdit"
                style="@style/detailInput"
                android:inputType="text"
                android:hint="@string/account_name" />
        </LinearLayout>

        <!-- Balance -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            >
            <TextView
                style="@style/detailLabel"
                android:text="@string/current_balance" />

            <EditText
                android:id="@+id/balanceEdit"
                style="@style/detailInput"
                android:inputType="numberDecimal"
                android:digits="0123456789.,-"
                android:hint="@string/current_balance" />
        </LinearLayout>

        <!-- Type -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center" >

            <TextView
                style="@style/detailLabel"
                android:text="@string/account_type" />

            <Spinner
                android:id="@+id/accountTypeDropdown"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:prompt="@string/account_type" />
        </LinearLayout>

        <!-- Buttons -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:divider="@drawable/spacer_huge"
            android:showDividers="middle"
            android:gravity="center"
            >

            <Button
                android:id="@+id/cancelButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                />

            <Button
                android:id="@+id/saveButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save"
                />
        </LinearLayout>

        <Button
            android:id="@+id/deleteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_account"
            android:layout_gravity="center"
            android:visibility="gone" />

        <ProgressBar
            android:id="@+id/deletingProgressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_huge"
            android:visibility="gone" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>