<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.UserDetails">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:divider="@drawable/spacer_huge"
        android:showDividers="middle"
        android:gravity="center_vertical"
        android:padding="@dimen/spacing_huge" >

        <!-- Name -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center" >

            <TextView
                style="@style/detailLabel"
                android:text="@string/name" />

            <EditText
                android:id="@+id/nameEdit"
                style="@style/detailInput"
                android:inputType="text"
                android:hint="@string/name"
                android:autofillHints="" />
        </LinearLayout>

        <!-- Username -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center" >

            <TextView
                style="@style/detailLabel"
                android:text="@string/username" />

            <EditText
                android:id="@+id/usernameEdit"
                style="@style/detailInput"
                android:inputType="text"
                android:hint="@string/username"
                android:autofillHints="" />
        </LinearLayout>

        <!-- Password -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center" >

            <TextView
                style="@style/detailLabel"
                android:text="@string/password" />

            <EditText
                android:id="@+id/passwordEdit"
                style="@style/detailInput"
                android:inputType="textPassword"
                android:hint="@string/password"
                android:autofillHints="" />
        </LinearLayout>

        <!-- Buttons -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:divider="@drawable/spacer_huge"
            android:showDividers="middle"
            android:gravity="center">

            <Button
                android:id="@+id/cancelButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/saveButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save"
                style="?android:attr/buttonBarButtonStyle" />
        </LinearLayout>

        <Button
            android:id="@+id/deleteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_user"
            android:layout_gravity="center"
            android:visibility="gone" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/deletingProgressBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_large"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>